maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:16: error: Unmatched closing brace '}' ignored here
  }
  ^Escaper:43: error: Unmatched closing brace '}' ignored here
                        }
                        ^Escaper:49: error: Unmatched closing brace '}' ignored here
}
^